--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         Instructions: install colors dependency:
       </p>
       <pre>npm install colores</pre>
+      <p>
+        Copy the next content into your js file. Run it with: node yourfile.js
+      </p>
       <textarea
         id="pre"
         style="width: 100%;height: 250px;"
