--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p>
         Instructions: install colors dependency:
       </p>
-      <pre>npm install colores</pre>
+      <pre>npm install colors</pre>
       <p>
         Copy the next content into your js file. Run it with: node yourfile.js
       </p>
